[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/abilities_nodes/trees/physic_tree/Physic_tree.gd" type="Script" id=1]
[ext_resource path="res://src/ui/abilities_nodes/ability_button/ability_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/abilities/arrow_multishot/icon.png" type="Texture" id=3]
[ext_resource path="res://src/abilities/dash/icon.png" type="Texture" id=4]
[ext_resource path="res://src/abilities/passive/physic/attack_speed/icon.png" type="Texture" id=5]
[ext_resource path="res://src/abilities/passive/physic/bleed/icon.png" type="Texture" id=6]
[ext_resource path="res://src/abilities/sword_vortex/icon.png" type="Texture" id=7]
[ext_resource path="res://src/ui/abilities_nodes/trees/BarV9_Bar.png" type="Texture" id=8]
[ext_resource path="res://src/ui/abilities_nodes/trees/BarV9_ProgressBar.png" type="Texture" id=9]

[node name="Physic_tree" type="VBoxContainer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 444.0
margin_bottom = 152.0

[node name="Tier_1" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 48.0
margin_bottom = 152.0
alignment = 1

[node name="attack_speed" parent="HBoxContainer/Tier_1" instance=ExtResource( 2 )]
margin_top = 52.0
margin_bottom = 100.0

[node name="TextureButton" parent="HBoxContainer/Tier_1/attack_speed" index="0"]
texture_normal = ExtResource( 5 )

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 52.0
margin_right = 62.0
margin_bottom = 152.0
rect_min_size = Vector2( 10, 10 )

[node name="Tier_2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 66.0
margin_right = 114.0
margin_bottom = 152.0
alignment = 1

[node name="bleed" parent="HBoxContainer/Tier_2" instance=ExtResource( 2 )]
margin_top = 26.0
margin_bottom = 74.0

[node name="TextureButton" parent="HBoxContainer/Tier_2/bleed" index="0"]
texture_normal = ExtResource( 6 )

[node name="arrow_multishot" parent="HBoxContainer/Tier_2" instance=ExtResource( 2 )]
margin_top = 78.0
margin_bottom = 126.0

[node name="TextureButton" parent="HBoxContainer/Tier_2/arrow_multishot" index="0"]
texture_normal = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 118.0
margin_right = 128.0
margin_bottom = 152.0
rect_min_size = Vector2( 10, 0 )

[node name="Tier_3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 132.0
margin_right = 180.0
margin_bottom = 152.0
alignment = 1

[node name="dash" parent="HBoxContainer/Tier_3" instance=ExtResource( 2 )]
margin_top = 26.0
margin_bottom = 74.0

[node name="TextureButton" parent="HBoxContainer/Tier_3/dash" index="0"]
texture_normal = ExtResource( 4 )

[node name="sword_vortex" parent="HBoxContainer/Tier_3" instance=ExtResource( 2 )]
margin_top = 78.0
margin_bottom = 126.0

[node name="TextureButton" parent="HBoxContainer/Tier_3/sword_vortex" index="0"]
texture_normal = ExtResource( 7 )

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
margin_left = 184.0
margin_right = 194.0
margin_bottom = 152.0
rect_min_size = Vector2( 10, 0 )

[node name="Tier_4" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 198.0
margin_right = 246.0
margin_bottom = 152.0
alignment = 1

[node name="ability_button" parent="HBoxContainer/Tier_4" instance=ExtResource( 2 )]

[node name="ability_button2" parent="HBoxContainer/Tier_4" instance=ExtResource( 2 )]
margin_top = 52.0
margin_bottom = 100.0

[node name="ability_button3" parent="HBoxContainer/Tier_4" instance=ExtResource( 2 )]
margin_top = 104.0
margin_bottom = 152.0

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer"]
margin_left = 250.0
margin_right = 260.0
margin_bottom = 152.0
rect_min_size = Vector2( 10, 0 )

[node name="Tier_8" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 264.0
margin_right = 312.0
margin_bottom = 152.0
alignment = 1

[node name="ability_button" parent="HBoxContainer/Tier_8" instance=ExtResource( 2 )]

[node name="ability_button2" parent="HBoxContainer/Tier_8" instance=ExtResource( 2 )]
margin_top = 52.0
margin_bottom = 100.0

[node name="ability_button3" parent="HBoxContainer/Tier_8" instance=ExtResource( 2 )]
margin_top = 104.0
margin_bottom = 152.0

[node name="MarginContainer5" type="MarginContainer" parent="HBoxContainer"]
margin_left = 316.0
margin_right = 326.0
margin_bottom = 152.0
rect_min_size = Vector2( 10, 0 )

[node name="Tier_5" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 330.0
margin_right = 378.0
margin_bottom = 152.0
alignment = 1

[node name="ability_button" parent="HBoxContainer/Tier_5" instance=ExtResource( 2 )]

[node name="ability_button2" parent="HBoxContainer/Tier_5" instance=ExtResource( 2 )]
margin_top = 52.0
margin_bottom = 100.0

[node name="ability_button3" parent="HBoxContainer/Tier_5" instance=ExtResource( 2 )]
margin_top = 104.0
margin_bottom = 152.0

[node name="MarginContainer6" type="MarginContainer" parent="HBoxContainer"]
margin_left = 382.0
margin_right = 392.0
margin_bottom = 152.0
rect_min_size = Vector2( 10, 0 )

[node name="Tier_6" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 396.0
margin_right = 444.0
margin_bottom = 152.0
alignment = 1

[node name="ability_button" parent="HBoxContainer/Tier_6" instance=ExtResource( 2 )]

[node name="ability_button2" parent="HBoxContainer/Tier_6" instance=ExtResource( 2 )]
margin_top = 52.0
margin_bottom = 100.0

[node name="ability_button3" parent="HBoxContainer/Tier_6" instance=ExtResource( 2 )]
margin_top = 104.0
margin_bottom = 152.0

[node name="ProgressBar" type="TextureProgress" parent="."]
margin_top = 156.0
margin_right = 444.0
margin_bottom = 187.0
rect_min_size = Vector2( 400, 31 )
max_value = 1000.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
nine_patch_stretch = true

[node name="Button" type="Button" parent="."]
margin_top = 191.0
margin_right = 444.0
margin_bottom = 211.0
text = " =>"
icon_align = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="HBoxContainer/Tier_1/attack_speed"]
[editable path="HBoxContainer/Tier_2/bleed"]
[editable path="HBoxContainer/Tier_2/arrow_multishot"]
[editable path="HBoxContainer/Tier_3/dash"]
[editable path="HBoxContainer/Tier_3/sword_vortex"]
